fix(css): final image jumps when placeholder is replaced
With current css the actual image is jumping by the 2px border the placeholder have explicitly set.
To achieve a better transition, no styles should be applied to the placeholder that may affect the width and height as compared to the actual image.

--- a/src/Resources/app/storefront/src/scss/base.scss
+++ b/src/Resources/app/storefront/src/scss/base.scss
@@ -3,7 +3,6 @@ img[data-blurhash] {
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-origin: content-box;
-    border: 1px dotted rgba(204, 204, 204, .5);
     background-image: url('../../../bundles/eyecookblurhash/storefront/assets/images/ecb-spinner.svg');
   }
 }
